# xcut

./: .gitignore  Cargo.toml  LICENSE  README.md  input.txt  output.txt  sample_logs.txt  sample_with_header.csv
examples/: basic_usage.rs  csv_output.rs  regex_filter.rs  tail_head.rs
src/: arg.rs  extract.rs  filter.rs  lib.rs  main.rs  reader.rs  writer.rs
tests/: cli.rs
tests/fixtures/: input1.txt
