[package]
name = "xcut"
version = "0.1.0"
edition = "2024"
authors = ["Kyota <jagbvg.eptpeox@gmail.com>"]
license = "MIT"
description = "An extended cut command with regex filtering and formatting"
readme = "README.md"
homepage = "https://github.com/kyotalab/xcut"
repository = "https://github.com/kyotalab/xcut"
keywords = ["cut", "cli", "filter", "regex"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
evalexpr = "12.0.2"
regex = "1.11.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
